bonus-labs/gateways-and-routes/coffee-and-tea.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: coffee-shop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: coffee-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee
  namespace: coffee-shop
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: v1
kind: Namespace
metadata:
  name: tea-shop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  namespace: tea-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea
  namespace: tea-shop
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
