bonus-labs/gateways-and-routes/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gw
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      hostname: "tea.lab.f5npi.net"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: myns
    - name: http-2
      hostname: "coffee.lab.f5npi.net"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: myns
